[gd_scene load_steps=3 format=3 uid="uid://blc8ggg67atn2"]

[ext_resource type="Script" path="res://scenes/inventory/inventory_slot_item.gd" id="1_6lhc7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_csj0w"]

[node name="InventorySlotItem" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_6lhc7")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_csj0w")

[connection signal="update_item" from="." to="." method="_on_update_item"]
